updating generator code

--- a/index.html
+++ b/index.html
@@ -33,6 +33,9 @@
         <option value="https://data.seattle.gov/api/views/6s5n-9e8v/rows.json?">
             % vehicles sold by dept
         </option>
+        <option value="https://data.seattle.gov/api/views/abpk-u8ab/rows.json?">
+            Cars
+        </option>
     </select> 
     <button>Generate Data</button>
 </div>
